--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -164,6 +164,9 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
           background-color: $color
           border-color: $color
           color: $color-invert
+        &.is-loading
+          &:after
+            border-color: transparent transparent $color $color !important
       &.is-inverted.is-outlined
         background-color: transparent
         border-color: $color-invert
