--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -273,6 +273,7 @@ $input-radius:              $radius !default
     justify-content: flex-start
     & > .control
       flex-basis: 0
+      flex-basis: auto
       flex-shrink: 0
       &:not(:last-child)
         margin-bottom: 0
