fix in .level-item mobile

--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -10,6 +10,7 @@
     margin-bottom: 0
   // Responsiveness
   +mobile
+    justify-content: flex-start
     &:not(:last-child)
       margin-bottom: 0.75rem
 
