Updated SASS rules based on Pats corrections

--- a/sass/base/minireset.sass
+++ b/sass/base/minireset.sass
@@ -58,15 +58,16 @@ html
     box-sizing: inherit
 
 // Media
-img
-  height: auto
-  max-width: 100%
+img,
 iframe,
 embed,
 object,
 audio,
 video
   max-width: 100%
+
+img:not(.mce-object)
+  height: auto
 
 // Iframe
 iframe
