--- a/sass/components/media.sass
+++ b/sass/components/media.sass
@@ -2,7 +2,6 @@
 .media-right
   flex-basis: auto
   flex-grow: 0
-  flex-shrink: 0
 
 .media-left
   margin-right: 1rem
@@ -14,6 +13,7 @@
   flex-basis: auto
   flex-grow: 1
   flex-shrink: 1
+  overflow: hidden
   text-align: left
   &.has-text-right
     text-align: right
