--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -250,6 +250,7 @@ ul
     .select
       border-radius: 0
       margin-right: -1px
+      min-width: 0
       width: auto
       &:hover
         z-index: 2
@@ -347,7 +348,7 @@ ul
     .checkbox
       line-height: $button-height
     & > .control
-      flex-basis: 0
+      flex-basis: auto
       flex-shrink: 0
       &:not(:last-child)
         margin-bottom: 0
