Fixed tinymce v5 iframe sizing bug.

--- a/sass/base/minireset.sass
+++ b/sass/base/minireset.sass
@@ -59,8 +59,9 @@ html
 
 // Media
 img
-  height: auto
-  max-width: 100%
+  &:not(.mce-object.mce-object-iframe) // fix incorrect iframe sizing in tinymce editor
+    height: auto
+    max-width: 100%
 iframe,
 embed,
 object,
