--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -3,6 +3,11 @@
   .fa
     font-size: inherit
     line-height: inherit
+  // Colors
+  @each $name, $pair in $colors
+    $color: nth($pair, 1)
+    &.is-#{$name}
+      color: $color
   // Sizes
   &.is-small
     +fa(14px, 1rem)
