add 'is-widescreen' modifier on the 'columns' container

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -5044,13 +5044,19 @@ label.panel-block:hover {
 }
 
 @media screen and (min-width: 769px) {
-  .columns:not(.is-desktop) {
+  .columns:not(.is-desktop):not(.is-widescreen) {
     display: flex;
   }
 }
 
 @media screen and (min-width: 1000px) {
   .columns.is-desktop {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 1192px) {
+  .columns.is-widescreen {
     display: flex;
   }
 }
