--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -243,9 +243,13 @@
     align-items: center
   // Responsiveness
   +tablet
-    &:not(.is-desktop)
+    &:not(.is-desktop):not(.is-widescreen)
       display: flex
   +desktop
     // Modifiers
     &.is-desktop
+      display: flex
+  +widescreen
+    // Modifiers
+    &.is-widescreen
       display: flex
