Added range support

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -156,6 +156,11 @@ $input-radius:              $radius !default
     select
       max-width: 100%    
 
+.range
+  max-width: 100%
+  margin-top: 0.4em
+  width: 100%
+
 // Togglable Multiselect
 .selectmultiple
   height: auto
