Fixed a few minor CSS issues

--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -17,6 +17,8 @@ $table-row-even-hover-background: $white-ter !default
     &.has-text-right
       .control
         float: right
+    &.titletable
+      font-weight: $weight-bold
   td,
   th
     border: 1px solid $table-border
