--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -202,3 +202,4 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2) !default
       position: absolute !important
   &.is-circle
     border-radius: 1024px
+    width: 2.285em
