Remove top and bottom margins on mobile level item
On mobile, when the level has the `is-mobile` flag:
- `.level-right` still retains its margin bottom
- `.level-item` still retains its margin top

These lead to misalignment.

--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -54,7 +54,9 @@
   // Modifiers
   &.is-mobile
     display: flex
-    & > .level-item
+    .level-right
+       margin-top: 0
+    .level-item
       &:not(:last-child)
         margin-bottom: 0
       &:not(.is-narrow)
