--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1,4 +1,4 @@
-/*! bulma.io v0.3.0 | MIT License | github.com/jgthms/bulma */
+/*! bulma.io v0.3.1 | MIT License | github.com/jgthms/bulma */
 @-webkit-keyframes spinAround {
   from {
     -webkit-transform: rotate(0deg);
@@ -801,6 +801,10 @@ a.box:active {
   color: #0a0a0a;
 }
 
+.button.is-white.is-outlined.is-loading:after {
+  border-color: transparent transparent white white !important;
+}
+
 .button.is-white.is-inverted.is-outlined {
   background-color: transparent;
   border-color: #0a0a0a;
@@ -860,6 +864,10 @@ a.box:active {
   background-color: #0a0a0a;
   border-color: #0a0a0a;
   color: white;
+}
+
+.button.is-black.is-outlined.is-loading:after {
+  border-color: transparent transparent #0a0a0a #0a0a0a !important;
 }
 
 .button.is-black.is-inverted.is-outlined {
@@ -923,6 +931,10 @@ a.box:active {
   color: #363636;
 }
 
+.button.is-light.is-outlined.is-loading:after {
+  border-color: transparent transparent whitesmoke whitesmoke !important;
+}
+
 .button.is-light.is-inverted.is-outlined {
   background-color: transparent;
   border-color: #363636;
@@ -982,6 +994,10 @@ a.box:active {
   background-color: #363636;
   border-color: #363636;
   color: whitesmoke;
+}
+
+.button.is-dark.is-outlined.is-loading:after {
+  border-color: transparent transparent #363636 #363636 !important;
 }
 
 .button.is-dark.is-inverted.is-outlined {
@@ -1045,6 +1061,10 @@ a.box:active {
   color: #fff;
 }
 
+.button.is-primary.is-outlined.is-loading:after {
+  border-color: transparent transparent #00d1b2 #00d1b2 !important;
+}
+
 .button.is-primary.is-inverted.is-outlined {
   background-color: transparent;
   border-color: #fff;
@@ -1104,6 +1124,10 @@ a.box:active {
   background-color: #3273dc;
   border-color: #3273dc;
   color: #fff;
+}
+
+.button.is-info.is-outlined.is-loading:after {
+  border-color: transparent transparent #3273dc #3273dc !important;
 }
 
 .button.is-info.is-inverted.is-outlined {
@@ -1167,6 +1191,10 @@ a.box:active {
   color: #fff;
 }
 
+.button.is-success.is-outlined.is-loading:after {
+  border-color: transparent transparent #23d160 #23d160 !important;
+}
+
 .button.is-success.is-inverted.is-outlined {
   background-color: transparent;
   border-color: #fff;
@@ -1228,6 +1256,10 @@ a.box:active {
   color: rgba(0, 0, 0, 0.7);
 }
 
+.button.is-warning.is-outlined.is-loading:after {
+  border-color: transparent transparent #ffdd57 #ffdd57 !important;
+}
+
 .button.is-warning.is-inverted.is-outlined {
   background-color: transparent;
   border-color: rgba(0, 0, 0, 0.7);
@@ -1287,6 +1319,10 @@ a.box:active {
   background-color: #ff3860;
   border-color: #ff3860;
   color: #fff;
+}
+
+.button.is-danger.is-outlined.is-loading:after {
+  border-color: transparent transparent #ff3860 #ff3860 !important;
 }
 
 .button.is-danger.is-inverted.is-outlined {
@@ -3287,11 +3323,15 @@ a.box:active {
   display: flex;
 }
 
-.level.is-mobile > .level-item:not(:last-child) {
+.level.is-mobile .level-right {
+  margin-top: 0;
+}
+
+.level.is-mobile .level-item:not(:last-child) {
   margin-bottom: 0;
 }
 
-.level.is-mobile > .level-item:not(.is-narrow) {
+.level.is-mobile .level-item:not(.is-narrow) {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
