--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1,4 +1,4 @@
-/*! bulma.io v0.3.0 | MIT License | github.com/jgthms/bulma */
+/*! bulma.io v0.3.1 | MIT License | github.com/jgthms/bulma */
 @-webkit-keyframes spinAround {
   from {
     -webkit-transform: rotate(0deg);
@@ -801,6 +801,10 @@ a.box:active {
   color: #0a0a0a;
 }
 
+.button.is-white.is-outlined.is-loading:after {
+  border-color: transparent transparent white white !important;
+}
+
 .button.is-white.is-inverted.is-outlined {
   background-color: transparent;
   border-color: #0a0a0a;
@@ -860,6 +864,10 @@ a.box:active {
   background-color: #0a0a0a;
   border-color: #0a0a0a;
   color: white;
+}
+
+.button.is-black.is-outlined.is-loading:after {
+  border-color: transparent transparent #0a0a0a #0a0a0a !important;
 }
 
 .button.is-black.is-inverted.is-outlined {
@@ -923,6 +931,10 @@ a.box:active {
   color: #363636;
 }
 
+.button.is-light.is-outlined.is-loading:after {
+  border-color: transparent transparent whitesmoke whitesmoke !important;
+}
+
 .button.is-light.is-inverted.is-outlined {
   background-color: transparent;
   border-color: #363636;
@@ -982,6 +994,10 @@ a.box:active {
   background-color: #363636;
   border-color: #363636;
   color: whitesmoke;
+}
+
+.button.is-dark.is-outlined.is-loading:after {
+  border-color: transparent transparent #363636 #363636 !important;
 }
 
 .button.is-dark.is-inverted.is-outlined {
@@ -1045,6 +1061,10 @@ a.box:active {
   color: #fff;
 }
 
+.button.is-primary.is-outlined.is-loading:after {
+  border-color: transparent transparent #00d1b2 #00d1b2 !important;
+}
+
 .button.is-primary.is-inverted.is-outlined {
   background-color: transparent;
   border-color: #fff;
@@ -1104,6 +1124,10 @@ a.box:active {
   background-color: #3273dc;
   border-color: #3273dc;
   color: #fff;
+}
+
+.button.is-info.is-outlined.is-loading:after {
+  border-color: transparent transparent #3273dc #3273dc !important;
 }
 
 .button.is-info.is-inverted.is-outlined {
@@ -1167,6 +1191,10 @@ a.box:active {
   color: #fff;
 }
 
+.button.is-success.is-outlined.is-loading:after {
+  border-color: transparent transparent #23d160 #23d160 !important;
+}
+
 .button.is-success.is-inverted.is-outlined {
   background-color: transparent;
   border-color: #fff;
@@ -1228,6 +1256,10 @@ a.box:active {
   color: rgba(0, 0, 0, 0.7);
 }
 
+.button.is-warning.is-outlined.is-loading:after {
+  border-color: transparent transparent #ffdd57 #ffdd57 !important;
+}
+
 .button.is-warning.is-inverted.is-outlined {
   background-color: transparent;
   border-color: rgba(0, 0, 0, 0.7);
@@ -1287,6 +1319,10 @@ a.box:active {
   background-color: #ff3860;
   border-color: #ff3860;
   color: #fff;
+}
+
+.button.is-danger.is-outlined.is-loading:after {
+  border-color: transparent transparent #ff3860 #ff3860 !important;
 }
 
 .button.is-danger.is-inverted.is-outlined {
@@ -7059,28 +7095,6 @@ svg {
   right: 0;
 }
 
-#github {
-  color: #333333;
-  border-color: #333333;
-}
-
-#github:hover {
-  background: #333333;
-  border-color: #333333;
-  color: white;
-}
-
-#twitter {
-  color: #55acee;
-  border-color: #55acee;
-}
-
-#twitter:hover {
-  background: #55acee;
-  border-color: #55acee;
-  color: white;
-}
-
 @-webkit-keyframes floatUp {
   0% {
     box-shadow: 0 0 0 rgba(10, 10, 10, 0), 0 0 0 rgba(10, 10, 10, 0), 0 0 0 rgba(10, 10, 10, 0);
@@ -7250,8 +7264,6 @@ svg {
 }
 
 #b {
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
   -webkit-animation-duration: 1.5s;
           animation-duration: 1.5s;
   -webkit-animation-fill-mode: both;
@@ -7334,15 +7346,13 @@ svg {
 #bulma {
   -webkit-animation: slideDown 500ms both;
           animation: slideDown 500ms both;
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
 }
 
 #modern-framework {
   -webkit-animation: slideUp 500ms both;
           animation: slideUp 500ms both;
-  -webkit-animation-delay: 1.2s;
-          animation-delay: 1.2s;
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
 }
 
 #npm {
@@ -7351,8 +7361,8 @@ svg {
           align-items: center;
   -webkit-animation: fadeIn 500ms both;
           animation: fadeIn 500ms both;
-  -webkit-animation-delay: 1.4s;
-          animation-delay: 1.4s;
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
   background: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -7375,22 +7385,22 @@ svg {
 #ghbtns {
   -webkit-animation: slideDown 500ms both;
           animation: slideDown 500ms both;
-  -webkit-animation-delay: 1.6s;
-          animation-delay: 1.6s;
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
 }
 
 html.route-index #carbon {
   -webkit-animation: slideUp 500ms both;
           animation: slideUp 500ms both;
-  -webkit-animation-delay: 1.8s;
-          animation-delay: 1.8s;
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
 }
 
 #download {
   -webkit-animation: fadeIn 500ms both;
           animation: fadeIn 500ms both;
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
 }
 
 #grid .notification {
@@ -7407,6 +7417,28 @@ html.route-index #carbon {
   border-radius: 5px;
   box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
   padding: 1.5rem;
+}
+
+#github {
+  color: #333333;
+  border-color: #333333;
+}
+
+#github:hover {
+  background: #333333;
+  border-color: #333333;
+  color: white;
+}
+
+#twitter {
+  color: #55acee;
+  border-color: #55acee;
+}
+
+#twitter:hover {
+  background: #55acee;
+  border-color: #55acee;
+  color: white;
 }
 
 #mc_embed_signup .control {
@@ -7647,11 +7679,6 @@ html.route-index #carbon {
   border-left: none;
   border-radius: 0;
   border-right: none;
-}
-
-#newsletter .input {
-  border-color: white;
-  box-shadow: none;
 }
 
 html ::-moz-selection {
