Added minor fixes

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -203,3 +203,6 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2) !default
   &.is-circle
     border-radius: 1024px
     width: 2.285em
+  .is-pulled-right
+    float: none
+    margin-left: auto
