--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -80,3 +80,5 @@ $table-row-even-hover-background: $white-ter !default
           background-color: $table-row-even-background
           &:hover
             background-color: $table-row-even-hover-background
+  &:last-child
+    margin-bottom: 0
