--- a/docs/_includes/bsa.html
+++ b/docs/_includes/bsa.html
@@ -8,7 +8,7 @@
   <script>
     (function(){
       if(typeof _bsa !== 'undefined' && _bsa) {
-      _bsa.init('default', 'CVAIKK3E', 'placement:demo', {
+      _bsa.init('default', 'CVAIKK3E', 'placement:bulmaio', {
         target: '.bsa-cpc',
         align: 'horizontal',
         disable_css: 'true'
