Fixes #336 - is-gapless columns and offset in column

--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -222,7 +222,7 @@
       margin-bottom: 0
     &:not(:last-child)
       margin-bottom: 1.5rem
-    & > .column
+    & > .column:not([class*="is-offset"])
       margin: 0
       padding: 0
   &.is-grid
