--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -298,3 +298,53 @@ $input-radius:              $radius !default
       position: absolute !important
       right: 0.75em
       top: 0.75em
+
+
+input[type="checkbox"]
+  &.switch
+    display: none
+    + label
+      position: relative
+      display: inline-block
+      cursor: pointer
+      font-weight: 500
+      text-align: left
+      margin: 0px
+      padding: 0px 44px
+      &:before, &:after
+        content: ""
+        position: absolute
+        margin: 0
+        outline: 0
+        top: 50%
+        transform: translate( 0, -50% )
+        transition: all .3s ease
+      &:before
+        left: 1px
+        width: 34px
+        height: 14px
+        background-color: rgba( $grey, 0.5 )
+        border-radius: 8px
+      &:after
+        left: 0
+        width: 20px
+        height: 20px
+        background-color: $grey
+        border-radius: 50%
+        box-shadow: 0 3px 1px -2px rgba(0,0,0,.14), 0 2px 2px 0 rgba(0,0,0,.098), 0 1px 5px 0 rgba(0,0,0,.084)
+  &:checked
+    + label
+      &:after
+        transform: translate( 80%, -50% )
+  @each $name, $pair in $colors
+    $color: nth($pair, 1)
+    $color-invert: nth($pair, 2)
+    &.is-#{$name}
+      display: none
+      &:checked
+        + label
+          &:before
+            background-color: rgba( $color, 0.5 )
+          &:after
+            background-color: $color
+            transform: translate( 80%, -50% )
