Fixed nav padding

--- a/sass/components/nav.sass
+++ b/sass/components/nav.sass
@@ -28,6 +28,8 @@ $nav-height: 3.5rem !default
       margin-right: 0.5rem
     &:last-child:not(:first-child)
       margin-left: 0.5rem
+  .nav-item
+    padding: 0
   // Responsiveness
   +mobile
     justify-content: flex-start
