Remove monospace named fonts

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -121,8 +121,8 @@
   </style>
 {% endif %}
 
-<script async id="twitter-wjs" src="https://platform.twitter.com/widgets.js"></script>
-<script async type="text/javascript" src="https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+<script async defer id="twitter-wjs" src="https://platform.twitter.com/widgets.js"></script>
+<script async defer type="text/javascript" src="https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
 
 <script src="{{ site.url }}/javascript/jquery-2.2.0.min.js"></script>
 <script src="{{ site.url }}/javascript/clipboard.min.js"></script>
