--- a/sass/utilities/variables.sass
+++ b/sass/utilities/variables.sass
@@ -27,7 +27,7 @@ $red:          hsl(348, 100%, 61%) !default
 
 // Typography
 $family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
-$family-monospace: "Inconsolata", "Consolas", "Monaco", monospace !default
+$family-monospace: monospace !default
 
 $size-1: 3.5rem !default
 $size-2: 2.75rem !default
