--- a/sass/elements/_all.sass
+++ b/sass/elements/_all.sass
@@ -3,6 +3,7 @@
 @import "box.sass"
 @import "button.sass"
 @import "content.sass"
+@import "dropdown"
 @import "form.sass"
 @import "icon.sass"
 @import "image.sass"
