Reording properties alphabetically

--- a/sass/elements/dropdown.sass
+++ b/sass/elements/dropdown.sass
@@ -1,5 +1,6 @@
 $dropdown-caret-width: 0.3rem !default
 $dropdown-min-width: 10rem !default
+$dropdown-zindex: 1000
 
 $dropdown-margin-top: 0.125rem !default
 $dropdown-padding-y: 0.4rem !default
@@ -16,8 +17,8 @@ $dropdown-bg: $body-background
 $dropdown-border-color: $grey-lighter
 
 .dropdown, .dropup
-  position: relative
   display: inline-block
+  position: relative
 
   &.is-active
     > .dropdown-menu
@@ -28,15 +29,15 @@ $dropdown-border-color: $grey-lighter
 
 .dropdown-toggle
   &::after
+    border-left: $dropdown-caret-width solid transparent
+    border-right: $dropdown-caret-width solid transparent
+    border-top: $dropdown-caret-width solid
+    content: ""
     display: inline-block
-    width: 0
     height: 0
     margin-left: $dropdown-caret-width
     vertical-align: middle
-    content: ""
-    border-top: $dropdown-caret-width solid
-    border-right: $dropdown-caret-width solid transparent
-    border-left: $dropdown-caret-width solid transparent
+    width: 0
 
   &:focus
     outline: 0
@@ -44,45 +45,45 @@ $dropdown-border-color: $grey-lighter
 .dropup
   .dropdown-toggle
     &::after
-      border-top: 0
       border-bottom: $dropdown-caret-width solid
+      border-top: 0
 
 .dropdown-menu
-  display: none
-  position: absolute
-  top: 100%
-  left: 0
-  z-index: 1000
-  float: left
-  min-width: $dropdown-min-width
-  padding: $dropdown-padding-y 0
-  margin: $dropdown-margin-top 0 0
-  font-size: $size-normal
-  color: $dropdown-color
-  text-align: left
-  list-style: none
-  background-color: $dropdown-bg
   background-clip: padding-box
+  background-color: $dropdown-bg
   border: $dropdown-border-width solid $dropdown-border-color
   border-radius: $dropdown-border-radius
+  color: $dropdown-color
+  display: none
+  float: left
+  font-size: $size-normal
+  left: 0
+  list-style: none
+  margin: $dropdown-margin-top 0 0
+  min-width: $dropdown-min-width
+  padding: $dropdown-padding-y 0
+  position: absolute
+  text-align: left
+  top: 100%
+  z-index: $dropdown-zindex
 
 .divider
+  background: $grey-lighter
   height: 1px
   margin: 0.5rem 0
   overflow: hidden
-  background: $grey-lighter
 
 .dropdown-item
-  display: block
-  width: 100%
-  padding: $dropdown-padding-y $dropdown-item-padding-x
-  clear: both
-  font-weight: $weight-normal
-  text-align: inherit
-  white-space: nowrap
   background: none
   border: 0
+  clear: both
   color: $dropdown-item-color
+  display: block
+  font-weight: $weight-normal
+  padding: $dropdown-padding-y $dropdown-item-padding-x
+  text-align: inherit
+  white-space:
+  width: 100%
 
   &:hover,
   &.active,
@@ -92,32 +93,32 @@ $dropdown-border-color: $grey-lighter
 
   &.disabled,
   &:disabled
-    cursor: not-allowed
-    color: $dropdown-link-disabled-color
     background-color: transparent
+    color: $dropdown-link-disabled-color
+    cursor: not-allowed
 
 .dropdown-menu-right
-  right: 0
   left: auto
+  right: 0
 
 .dropdown-menu-left
-  right: auto
   left: 0
+  right: auto
 
 .dropdown-heading
-  display: block
-  padding: $dropdown-padding-y $dropdown-item-padding-x
-  margin-bottom: 0
-  font-size: $size-normal
   color: $grey-light
-  white-space: nowrap
+  display: block
+  font-size: $size-normal
   font-weight: 500
+  margin-bottom: 0
+  padding: $dropdown-padding-y $dropdown-item-padding-x
+  white-space: nowrap
 
 .dropup
   .dropdown-menu
-    top: auto
     bottom: 100%
     margin-bottom: $dropdown-margin-top
+    top: auto
 
 .nav-item.dropdown
   > .dropdown-menu
