--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1699,6 +1699,120 @@ a.box:active {
   font-size: 1.5rem;
 }
 
+.dropdown, .dropup {
+  display: inline-block;
+  position: relative;
+}
+
+.dropdown.is-active > .dropdown-menu, .dropup.is-active > .dropdown-menu {
+  display: block;
+}
+
+.dropdown.is-active > a, .dropup.is-active > a {
+  outline: 0;
+}
+
+.dropdown-toggle::after {
+  border-left: 0.3rem solid transparent;
+  border-right: 0.3rem solid transparent;
+  border-top: 0.3rem solid;
+  content: "";
+  display: inline-block;
+  height: 0;
+  margin-left: 0.3rem;
+  vertical-align: middle;
+  width: 0;
+}
+
+.dropdown-toggle:focus {
+  outline: 0;
+}
+
+.dropup .dropdown-toggle::after {
+  border-bottom: 0.3rem solid;
+  border-top: 0;
+}
+
+.dropdown-menu {
+  background-clip: padding-box;
+  background-color: white;
+  border: 1px solid #dbdbdb;
+  border-radius: 3px;
+  color: #4a4a4a;
+  display: none;
+  float: left;
+  font-size: 1rem;
+  left: 0;
+  list-style: none;
+  margin: 0.125rem 0 0;
+  min-width: 10rem;
+  padding: 0.4rem 0;
+  position: absolute;
+  text-align: left;
+  top: 100%;
+  z-index: 1000;
+}
+
+.divider {
+  background: #dbdbdb;
+  height: 1px;
+  margin: 0.5rem 0;
+  overflow: hidden;
+}
+
+.dropdown-item {
+  background: none;
+  border: 0;
+  clear: both;
+  color: #4a4a4a;
+  display: block;
+  font-weight: 400;
+  padding: 0.4rem 1.5rem;
+  text-align: inherit;
+  width: 100%;
+}
+
+.dropdown-item:hover, .dropdown-item.active, .dropdown-item:active {
+  background-color: #f9f9f9;
+  text-decoration: none;
+}
+
+.dropdown-item.disabled, .dropdown-item:disabled {
+  background-color: transparent;
+  color: #7a7a7a;
+  cursor: not-allowed;
+}
+
+.dropdown-menu-right {
+  left: auto;
+  right: 0;
+}
+
+.dropdown-menu-left {
+  left: 0;
+  right: auto;
+}
+
+.dropdown-heading {
+  color: #b5b5b5;
+  display: block;
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 0;
+  padding: 0.4rem 1.5rem;
+  white-space: nowrap;
+}
+
+.dropup .dropdown-menu {
+  bottom: 100%;
+  margin-bottom: 0.125rem;
+  top: auto;
+}
+
+.nav-item.dropdown > .dropdown-menu {
+  margin: 0 0.75rem;
+}
+
 .input,
 .textarea {
   -moz-appearance: none;
