Use of $speed and $easing variables

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -318,7 +318,7 @@ input[type="checkbox"]
         outline: 0
         top: 50%
         transform: translate( 0, -50% )
-        transition: all .3s ease
+        transition: all $speed $easing
       &:before
         left: 1px
         width: 34px
