--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -300,10 +300,10 @@ $input-radius:              $radius !default
       top: 0.75em
 
 
-input[type="checkbox"]
-  &.switch
+.switch
+  input[type="checkbox"]
     display: none
-    + label
+    + span
       position: relative
       display: inline-block
       cursor: pointer
@@ -332,19 +332,19 @@ input[type="checkbox"]
         background-color: $grey
         border-radius: 50%
         box-shadow: 0 3px 1px -2px rgba(0,0,0,.14), 0 2px 2px 0 rgba(0,0,0,.098), 0 1px 5px 0 rgba(0,0,0,.084)
-  &:checked
-    + label
-      &:after
-        transform: translate( 80%, -50% )
-  @each $name, $pair in $colors
-    $color: nth($pair, 1)
-    $color-invert: nth($pair, 2)
-    &.is-#{$name}
-      display: none
-      &:checked
-        + label
-          &:before
-            background-color: rgba( $color, 0.5 )
-          &:after
-            background-color: $color
-            transform: translate( 80%, -50% )
+    &:checked
+      + span
+        &:after
+          transform: translate( 80%, -50% )
+    @each $name, $pair in $colors
+      $color: nth($pair, 1)
+      $color-invert: nth($pair, 2)
+      &.is-#{$name}
+        display: none
+        &:checked
+          + label
+            &:before
+              background-color: rgba( $color, 0.5 )
+            &:after
+              background-color: $color
+              transform: translate( 80%, -50% )
