Minor fix (replace + label by + span)

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -342,7 +342,7 @@ $input-radius:              $radius !default
       &.is-#{$name}
         display: none
         &:checked
-          + label
+          + span
             &:before
               background-color: rgba( $color, 0.5 )
             &:after
