Removes padding-related directives for .delete nested inside components and elements that needs their own padding directives. The inherited padding for nested .delete caused no problems for desktop browsers, because their user agent stylesheets have overriding directives for padding for the relevant <button>, etc. But on iOS Safari there are no such directives.
Fixes jgthms/bulma#490.

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -2518,6 +2518,7 @@ a.box:active {
 }
 
 .notification .delete {
+  padding: 0;
   position: absolute;
   right: 0.5em;
   top: 0.5em;
@@ -2779,6 +2780,7 @@ a.box:active {
 }
 
 .tag .delete {
+  padding: 0;
   margin-left: 0.25em;
   margin-right: -0.5em;
 }
@@ -3638,6 +3640,7 @@ a.box:active {
   -ms-flex-negative: 0;
       flex-shrink: 0;
   margin-left: 0.75em;
+  padding: 0;
 }
 
 .message-header + .message-body {
