--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -13,6 +13,7 @@
   vertical-align: top
   white-space: nowrap
   .delete
+    padding: 0
     margin-left: 0.25em
     margin-right: -0.5em
   // Colors
