--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2518,6 +2518,7 @@ a.box:active {
 }
 
 .notification .delete {
+  padding: 0;
   position: absolute;
   right: 0.5em;
   top: 0.5em;
@@ -2779,6 +2780,7 @@ a.box:active {
 }
 
 .tag .delete {
+  padding: 0;
   margin-left: 0.25em;
   margin-right: -0.5em;
 }
@@ -3638,6 +3640,7 @@ a.box:active {
   -ms-flex-negative: 0;
       flex-shrink: 0;
   margin-left: 0.75em;
+  padding: 0;
 }
 
 .message-header + .message-body {
