Makes default button style conform properly to the requirements of is-outlined, is-inverted, and is-inverted + is-outlined. Fixes jgthms/bulma#535.

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -751,6 +751,46 @@ a.box:active {
   color: #363636;
 }
 
+.button.is-outlined {
+  background-color: transparent;
+  border-color: #363636;
+}
+
+.button.is-outlined:hover {
+  background-color: white;
+  border-color: #b5b5b5;
+}
+
+.button.is-outlined:focus {
+  background-color: white;
+  border-color: #00d1b2;
+}
+
+.button.is-outlined.is-loading:after {
+  border-color: transparent transparent #dbdbdb #dbdbdb !important;
+}
+
+.button.is-inverted {
+  background-color: #363636;
+  border-color: transparent;
+  color: white;
+}
+
+.button.is-inverted:hover {
+  background-color: #292929;
+}
+
+.button.is-inverted.is-outlined {
+  background-color: transparent;
+  border-color: white;
+  color: white;
+}
+
+.button.is-inverted.is-outlined:hover, .button.is-inverted.is-outlined:focus {
+  background-color: white;
+  color: #363636;
+}
+
 .button.is-white {
   background-color: white;
   border-color: transparent;
