--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -5615,8 +5615,17 @@ label.panel-block:hover {
 }
 
 .columns.is-gapless > .column {
-  margin: 0;
   padding: 0;
+}
+
+.columns.is-gapless > .column[class*="is-offset"] {
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.columns.is-gapless > .column:not([class*="is-offset"]) {
+  margin: 0;
 }
 
 @media screen and (min-width: 769px) {
