--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -222,9 +222,14 @@
       margin-bottom: 0
     &:not(:last-child)
       margin-bottom: 1.5rem
-    & > .column:not([class*="is-offset"])
-      margin: 0
+    & > .column
       padding: 0
+      &[class*="is-offset"]
+        margin-right: 0
+        margin-top: 0
+        margin-bottom: 0
+      &:not([class*="is-offset"])
+        margin: 0
   &.is-grid
     // Responsiveness
     +tablet
