Adds $rem-baseline for rem<->px conversion and convertUnit(), normalizing the px conversion for delete dimension values. Removed removeUnit() to save us from the temptation to use it, inlining its logic where used by convertUnit().
Fixes jgthms/bulms#502 and jgthms/bulma#556.

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -107,7 +107,7 @@ th {
 
 html {
   background-color: white;
-  font-size: 14px;
+  font-size: 0.875rem;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   min-width: 300px;
@@ -2905,7 +2905,7 @@ a.box:active {
 }
 
 .title.is-6 {
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 
 .subtitle {
@@ -2944,7 +2944,7 @@ a.box:active {
 }
 
 .subtitle.is-6 {
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 
 .block:not(:last-child) {
