--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -29,10 +29,10 @@
 
 =delete
   // We need even pixel dimensions to ensure the delete cross can be perfectly centered
-  $dimension-small: roundToEvenNumber(1.5 * removeUnit($size-6) * removeUnit($size-small)) * 1px
-  $dimension-normal: roundToEvenNumber(1.5 * removeUnit($size-6) * removeUnit($size-normal)) * 1px
-  $dimension-medium: roundToEvenNumber(1.5 * removeUnit($size-6) * removeUnit($size-medium)) * 1px
-  $dimension-large: roundToEvenNumber(1.5 * removeUnit($size-6) * removeUnit($size-large)) * 1px
+  $dimension-small: roundToEvenNumber(1.3 * convertUnit($size-small, 'px'))
+  $dimension-normal: roundToEvenNumber(1.3 * convertUnit($size-normal, 'px'))
+  $dimension-medium: roundToEvenNumber(1.3 * convertUnit($size-medium, 'px'))
+  $dimension-large: roundToEvenNumber(1.3 * convertUnit($size-large, 'px'))
   +unselectable
   -moz-appearance: none
   -webkit-appearance: none
