--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -107,7 +107,7 @@ th {
 
 html {
   background-color: white;
-  font-size: 14px;
+  font-size: 0.875rem;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   min-width: 300px;
@@ -2905,7 +2905,7 @@ a.box:active {
 }
 
 .title.is-6 {
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 
 .subtitle {
@@ -2944,7 +2944,7 @@ a.box:active {
 }
 
 .subtitle.is-6 {
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 
 .block:not(:last-child) {
