--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -15,12 +15,12 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2) !default
 
 @function buttonIconSpacing($button-font-size, $icon-width)
   // The button font-size value with no unit
-  $button-value: removeUnit($button-font-size)
+  $button-value: convertUnit($button-font-size, 'rem')
   // The rem height of the button
   // based on a height of 2.5em
-  $button-height: 2.5rem * $button-value // rem
+  $button-height: 2.5 * $button-value // rem
   // The rem total horizontal padding of the button
-  $button-horizontal-padding: 2 * 0.75rem * $button-value // rem
+  $button-horizontal-padding: 2 * 0.75 * $button-value // rem
   // For the icon center to align with the button center
   // the horizontal padding + the icon width must equal the button height
   // $button-height = $button-horizontal-padding + $icon-width + $difference
