--- a/sass/utilities/variables.sass
+++ b/sass/utilities/variables.sass
@@ -26,6 +26,7 @@ $purple:       hsl(271, 100%, 71%) !default
 $red:          hsl(348, 100%, 61%) !default
 
 // Typography
+$rem-baseline: 16px
 $family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
 $family-monospace: "Inconsolata", "Consolas", "Monaco", monospace !default
 
@@ -34,7 +35,7 @@ $size-2: 2.75rem !default
 $size-3: 2rem !default
 $size-4: 1.5rem !default
 $size-5: 1.25rem !default
-$size-6: 14px !default
+$size-6: 0.875rem !default
 $size-7: 0.75rem !default
 
 $weight-light: 300 !default
