Updated based on MODworks requirements

--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -30,9 +30,13 @@
       max-width: 56px
   &.is-centered
     display: block
+    left: 0
     position: absolute
     text-align: center
     top: 50%
     transform: translate(0, -50%)
     width: 100%
     z-index: 1
+  &.is-centered-auto
+    left: auto
+    width: auto
