--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -128,8 +128,8 @@
       font-weight: $weight-bold
     .nav-logo
       img
-        height: $header-logo
         max-height: $header-logo
+        max-width: 200px
     .nav-search
       position: relative
       width: 100%
@@ -268,14 +268,13 @@
   .hero
     &.is-primary
       .nav-logo
+        padding-right: 0
         img
           max-height: 34px
+          max-width: 120px
 
 +tablet
   .hero
-    &.is-primary
-      .nav-searchlogin
-        padding-right: 0
     &.is-dark
       .controlactions
         margin-top: 12px
@@ -297,3 +296,5 @@
     &.is-primary
       .nav-logo
         padding-left: 0
+      .nav-searchlogin
+        padding-right: 0
